add-navigation-in-gallery.html

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -16,5 +16,9 @@
         <img src="../images/image5.jpg" alt="Яхта" title="Яхта" height="300">
         <img src="../images/image6.jpg" alt="Вілла" title="Вілла" height="300">
     </div>
+    <!--Перехід до index.html-->
+    <nav>
+        <span>Перейти на сторінку</span> <a href="../index.html">index.html</a>
+    </nav>
 </body>
 </html>
