changed-index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>First Github html</title>
 </head>
 <body>
-    <p>Перший html файл для Github</p>
-    
+    <h1>Перший html файл для Github</h1>
+    <!--Список команд Git-->
+    <div>
+        <p>Деякі з команд, які ми розглядали на роботі з терміналом:</p>
+        <ul>
+            <li>git clone</li>
+            <li>git status</li>
+            <li>git add .</li>
+            <li>git commit</li>
+            <li>git push</li>
+            <li>git pull</li>
+        </ul>
+    </div>
+    <!--Перехід до gallery.html-->
+    <nav>
+        <span>Перейти на сторінку</span> <a href="./pages/gallery.html">gallery.html</a>
+    </nav>
 </body>
 </html>
